--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Library for Subito micro services using GraphQL interface",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "bundle": "webpack --config=webpack.config.js",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
+    "build-doc": "api-extractor run --local --verbose",
+    "build": "./node_modules/.bin/tsc -p tsconfig.build.json",
+    "build-dev": "npm run build && NODE_ENV=development node --inspect lib/index.js",
+    "dev": "nodemon --ext ts --exec \"npm run build-dev\"",
+    "start": "npm run build && NODE_ENV=production node lib/index.js"
   },
   "repository": {
     "type": "git",
