core(git): update renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -2,18 +2,18 @@
   "extends": [
     "config:base"
   ],
-  "reviewers": [
-    "Xavius1"
-  ],
   "packageRules": [
     {
       "matchUpdateTypes": [
         "minor",
-        "patch",
-        "pin",
-        "digest"
+        "patch"
       ],
+      "matchCurrentVersion": "!/^0/",
       "automerge": true
     }
+  ],
+  "automergeType": "branch",
+  "reviewers": [
+    "Xavius1"
   ]
 }
