--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
   "description": "Library for subito micro services using GraphQL interface",
   "main": "index.js",
   "scripts": {
+    "np": "npm run pre-publish && np",
+    "pre-publish": "npm run compile-js && npm run build-types && npm run build-dist",
+    "build-dist": "./node_modules/.bin/tsc -p tsconfig.dist.json",
+    "build-doc": "./node_modules/.bin/subito-build-doc",
+    "build-types": "./node_modules/.bin/subito-build-types",
+    "compile-js": "./node_modules/.bin/subito-compile-js",
+    "run-tests": "./node_modules/.bin/subito-run-tests",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "build": "npx tsc -p tsconfig.build.json",
     "build-dev": "npm run build && NODE_ENV=development node --inspect lib/index.js",
     "dev": "nodemon --ext ts --exec \"npm run build-dev\"",
@@ -38,7 +46,7 @@
     "jest": "27.5.1",
     "lint-staged": "12.3.3",
     "nodemon": "2.0.15",
-    "subito-ci": "0.1.10",
+    "subito-ci": "0.1.29",
     "ts-jest": "27.1.3",
     "ts-node": "10.5.0",
     "typescript": "4.5.5"
