--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "subito-graphql",
   "version": "0.1.0",
   "description": "Library for subito micro services using GraphQL interface",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "typings": "./dist/subito-graphql.d.ts",
+  "type": "module",
   "scripts": {
     "np": "npm run pre-publish && np",
     "pre-publish": "npm run compile-js && npm run build-types && npm run build-dist",
@@ -57,6 +59,6 @@
     "get-value": "^3.0.1",
     "graphql-scalars": "^1.14.1",
     "moment": "^2.29.1",
-    "subito-lib": "0.3.0"
+    "subito-lib": "0.3.2"
   }
 }
