--- a/package.json
+++ b/package.json
@@ -54,10 +54,10 @@
     "typescript": "4.7.4"
   },
   "dependencies": {
-    "apollo-server": "^3.6.3",
-    "apollo-server-errors": "^3.3.1",
+    "apollo-server": "3.9.0",
+    "apollo-server-errors": "3.3.1",
     "get-value": "^3.0.1",
-    "graphql-scalars": "^1.15.0",
+    "graphql-scalars": "1.17.0",
     "moment": "^2.29.1",
     "subito-lib": "0.3.2"
   }
