--- a/package.json
+++ b/package.json
@@ -54,11 +54,12 @@
     "typescript": "4.7.4"
   },
   "dependencies": {
+    "apollo-datasource": "3.3.2",
     "apollo-server": "3.10.0",
     "apollo-server-errors": "3.3.1",
     "get-value": "^3.0.1",
     "graphql-scalars": "1.17.0",
     "moment": "^2.29.1",
-    "subito-lib": "0.10.2"
+    "subito-lib": "0.13.0"
   }
 }
