--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "apollo-server": "3.10.2",
     "apollo-server-errors": "3.3.1",
     "get-value": "^3.0.1",
+    "graphql": "16.6.0",
     "graphql-scalars": "1.18.0",
     "moment": "2.29.4",
     "subito-lib": "0.13.1"
