--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "build": "npx tsc -p tsconfig.build.json",
     "build-dev": "npm run build && NODE_ENV=development node --inspect lib/index.js",
-    "dev": "nodemon --ext ts --exec \"npm run build-dev\"",
+    "dev": "nodemon --ext ts,json --exec \"npm run build-dev\"",
     "start": "npm run build && NODE_ENV=production node lib/index.js"
   },
   "repository": {
